--- a/.gitmodules
+++ b/.gitmodules
@@ -1,7 +1,7 @@
 [submodule "public"]
 	path = public
 	url = git@github.com:sijad/sijad.github.io.git
-	branch = master
+	branch = gh-pages
 [submodule "themes/kiera"]
 	path = themes/kiera
 	url = https://github.com/avianto/hugo-kiera.git
