--- a/.travis.yml
+++ b/.travis.yml
@@ -1,27 +1,24 @@
+# source https://docs.travis-ci.com/user/deployment/pages/
 # source https://www.metachris.com/2017/04/continuous-deployment-hugo---travis-ci--github-pages/
 
-before_install:
-  - sudo apt-get install hugo
-
-# Install the apt prerequisites
 addons:
   apt:
     packages:
       - python-pygments
 
-# Clean and don't fail
-install:
-  - rm -rf public || exit 0
+before_script:
+  - wget https://github.com/gohugoio/hugo/releases/download/v0.52/hugo_0.52_Linux-ARM64.tar.gz -O hugo.tar.gz
+  - tar -xvf hugo.tar.gz
 
-# Build the website
 script:
-  - hugo
+  - ./hugo
 
-# Deploy to GitHub pages
 deploy:
   provider: pages
   skip_cleanup: true
   local_dir: public
-  github_token: $GITHUB_TOKEN # Set in travis-ci.org dashboard
+  github_token: $GITHUB_TOKEN
+  keep-history: true
+  fqdn: hashemian.me
   on:
     branch: gh-pages
