use extended version of hugo

--- a/.travis.yml
+++ b/.travis.yml
@@ -7,7 +7,7 @@ addons:
       - python-pygments
 
 before_script:
-  - wget https://github.com/gohugoio/hugo/releases/download/v0.52/hugo_0.52_Linux-64bit.tar.gz -O hugo.tar.gz
+  - wget https://github.com/gohugoio/hugo/releases/download/v0.52/hugo_extended_0.52_Linux-64bit.tar.gz -O hugo.tar.gz
   - tar -xvf hugo.tar.gz
   - chmod +x ./hugo
 
