--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,8 @@
 # source https://docs.travis-ci.com/user/deployment/pages/
 # source https://www.metachris.com/2017/04/continuous-deployment-hugo---travis-ci--github-pages/
 
+dist: xenial
+
 addons:
   apt:
     packages:
