--- a/.gitignore
+++ b/.gitignore
@@ -1,36 +1,24 @@
+# Logs
+logs
+*.log
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+pnpm-debug.log*
+lerna-debug.log*
 
-# Created by https://www.gitignore.io/api/osx
-# Edit at https://www.gitignore.io/?templates=osx
+node_modules
+dist
+dist-ssr
+*.local
 
-### OSX ###
-# General
+# Editor directories and files
+.vscode/*
+!.vscode/extensions.json
+.idea
 .DS_Store
-.AppleDouble
-.LSOverride
-
-# Icon must end with two \r
-Icon
-
-# Thumbnails
-._*
-
-# Files that might appear in the root of a volume
-.DocumentRevisions-V100
-.fseventsd
-.Spotlight-V100
-.TemporaryItems
-.Trashes
-.VolumeIcon.icns
-.com.apple.timemachine.donotpresent
-
-# Directories potentially created on remote AFP share
-.AppleDB
-.AppleDesktop
-Network Trash Folder
-Temporary Items
-.apdisk
-
-# End of https://www.gitignore.io/api/osx
-
-resources
-public
+*.suo
+*.ntvs*
+*.njsproj
+*.sln
+*.sw?
