--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "prettier": "^2.8.7",
     "sass": "^1.62.0",
     "typescript": "^5.0.2",
-    "vite": "^4.3.0"
+    "vite": "^4.3.0",
+    "vite-plugin-ejs": "^1.6.4"
   }
 }
