--- a/package.json
+++ b/package.json
@@ -22,6 +22,12 @@
     "sass": "^1.62.0",
     "typescript": "^5.0.2",
     "vite": "^4.3.0",
-    "vite-plugin-ejs": "^1.6.4"
+    "vite-plugin-ejs": "^1.6.4",
+    "vite-plugin-inject-preload": "^1.3.1"
+  },
+  "dependencies": {
+    "@fontsource/barlow-condensed": "^4.5.9",
+    "@fontsource/londrina-sketch": "^4.5.9",
+    "@fontsource/londrina-solid": "^4.5.11"
   }
 }
